# hmo

./: .gitignore  BFS.h  CMakeLists.txt  ERROR  GA.cpp  GA.h  Greedy.cpp  Greedy.h  Instance.cpp  Instance.h  README.MD  Rand.cpp  Solution.cpp  Solution.h  bfs.cpp  bfs.h  blah  compute_ga_solutions.cpp  compute_greedy_solution.cpp  compute_solution_error.cpp  ga.cpp  ga.h  greedy.h  instance.cpp  instance.h  main.cpp  main_compute_error.cpp  main_read_solution.cpp  random_with_chrono.cpp  random_with_chrono.h  solution.h
lib/gtest-1.8.0/: CHANGES  LICENSE  README.md
lib/gtest-1.8.0/docs/: AdvancedGuide.md  DevGuide.md  Documentation.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_Documentation.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_6_AdvancedGuide.md  V1_6_Documentation.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_PumpManual.md  V1_6_XcodeGuide.md  V1_7_AdvancedGuide.md  V1_7_Documentation.md  V1_7_FAQ.md  V1_7_Primer.md
lib/gtest-1.8.0/m4/: acx_pthread.m4
lib/gtest-1.8.0/scripts/: common.py  fuse_gtest_files.py  gen_gtest_pred_impl.py  gtest-config.in  pump.py  release_docs.py  upload.py  upload_gtest.py
lib/gtest-1.8.0/test/: gtest_break_on_failure_unittest.py  gtest_catch_exceptions_test.py  gtest_color_test.py  gtest_env_var_test.py  gtest_filter_unittest.py  gtest_help_test.py  gtest_list_tests_unittest.py  gtest_output_test.py  gtest_output_test_golden_lin.txt  gtest_shuffle_test.py  gtest_test_utils.py  gtest_throw_on_failure_test.py  gtest_uninitialized_test.py  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
lib/hmo/: CMakeLists.txt  GA.cpp  GA.h  Greedy.cpp  Greedy.h  IOManager.cpp  IOManager.h  Instance.cpp  Instance.h  Macros.h  Node.cpp  Node.h  Rand.cpp  Rand.h  Solution.cpp  Solution.h
model/: instance.cpp  instance.h  solution.cpp  solution.h  time_utils.cpp  time_utils.h
res/: instanca.txt  instanca_anotirana.txt
results/: 6211.txt  best.txt  res-1-0min-popic.txt  res-4075-0min-popic  res-4965-0min-popic
search/: bfs.cpp  bfs.h  ga.cpp  ga.h  greedy.cpp  greedy.h
src/: main.cpp
test/: test.cpp
(+7 files in other folders)
